--- a/styles/style.css
+++ b/styles/style.css
@@ -31,7 +31,7 @@ html,body{
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   padding-left: 25px;
   padding-top: 20%;
-  font-size: 55px;
+  font-size: 50px;
 }
 
 .hero-main2{
@@ -41,7 +41,7 @@ html,body{
   margin-left:auto;
   margin-right: auto;
   padding-left: 25px;
-  font-size: 55px;
+  font-size: 50px;
 }
 
 
@@ -113,6 +113,7 @@ html,body{
 .navbar a img{
   width:25px;
   height:25px;
+  padding-left: 10px;
 }
 
 .IconsRight{
@@ -163,10 +164,9 @@ a{
 
 
 #news-2 {
-  max-height: 340px;
-  overflow-y: auto;
+  max-height: 90%;
+  overflow-y:auto;
   padding: 8px;
-  border: 1px solid #ddd;
 }
 
 #news-2 .article {
@@ -228,7 +228,7 @@ footer{
 }
 
 /* Mobile view: stack vertically, text first */
-@media (max-width: 768px) {
+@media(max-aspect-ratio: 1/1) {
   .firsthero {
     height:100%;
     flex-direction: column;
@@ -248,16 +248,22 @@ footer{
 
   }
 
+  .weather-info{
+    font-size: 10px;
+  }
+
   .navbar a img{
   width:15px;
   height:15px;
-}
 
+ 
+  }
+  .article-contents{
+    height:60vh;
+  }
 
   
 
+
+  
 }
-
-
-
-
