--- a/styles/style.css
+++ b/styles/style.css
@@ -2,11 +2,12 @@
   
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
-p,h1.h2,h3{
+p,h1.h2,h3,h4,h5{
   background-color: transparent;
   color: #ffe6a7be;
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 } 
+
 
 
 
@@ -164,10 +165,12 @@ html,body{
   font-size: 3rem;
 }
 
+
+
 .navbar{
   display:flex;
   flex-direction: row;
-  gap:20px;
+  gap:2%;
   background: #0f0700;
   padding:25px;
   padding-left: 6%;
@@ -196,6 +199,7 @@ html,body{
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   color: #ffe6a7;
   text-decoration: none;
+  font-size: 1rem;
 }
 
 .weather-info {
@@ -311,6 +315,17 @@ footer{
   flex-direction: column;
   font-size: 1.2rem;
   transition: transform 0.3s;
+}
+
+.square-item{
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  width: 90%;
+  text-align: center;
+}
+
+.square:hover .square-item{
+  opacity: 1;
 }
 
 .square img{
@@ -489,6 +504,7 @@ iframe{
   margin: auto;
   padding-top: 2%;
   padding-bottom: 2%;
+  border-radius: 10px;
 }
 
 .contact-info p{
@@ -500,7 +516,41 @@ iframe{
   font-size: 2rem;
 }
 
+.dialog {
+  display: none; /* hidden by default */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.6);
+  justify-content: center;
+  align-items: center;
+}
 
+.dialog-content {
+  background: white;
+  padding: 20px;
+  border-radius: 12px;
+  width: 300px;
+  text-align: center;
+  animation: fadeIn 0.3s ease-in-out;
+}
+
+.dialog-content h2 {
+  margin: 10px 0;
+}
+
+.close {
+  float: right;
+  font-size: 22px;
+  cursor: pointer;
+}
+
+@keyframes fadeIn {
+  from { opacity: 0; transform: scale(0.9); }
+  to { opacity: 1; transform: scale(1); }
+}
 
 
 /* Mobile view: stack vertically, text first */
@@ -518,8 +568,11 @@ iframe{
     order: 1; /* Text stays on top */
   }
   .hero-main1{
-    margin-top: 2px;
-    text-align: center;
+    margin-top: 0px;
+  
+    margin-left: 2px;
+    margin-right: auto;
+    
   }
 
   .hero-column2 {
@@ -530,15 +583,29 @@ iframe{
 
   .weather-info{
     font-size: 10px;
+    margin-left: 20px;
   }
 
   .navbar a img{
   width:15px;
   height:15px;
-
- 
   }
 
+ 
+
+  .IconsRight{
+    display: flex;
+    flex-direction: row;
+    max-width: 30px;
+    max-height: 15px;
+    margin-left: 2% auto;
+    margin-right: 10px;
+  }
+
+  .navbar{
+    font-size: small;
+  }
+ 
 
 
 
